- fix: functioning cursor but still not centered

--- a/assets/css/indexStyles.css
+++ b/assets/css/indexStyles.css
@@ -429,6 +429,7 @@ button#backToTopBtn {
     pointer-events: none; 
     z-index: 999999999;
     transition: background-color 0.2s ease;
+    box-shadow: rgba(99, 99, 99, 0.7) 0px 2px 8px 0px;
 }
 
 /* Media Queries */
